<resources>
    <string name="app_name">MediHelp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="medihelp">Medihelp</string>
    <string name="home">Home</string>
    <string name="contacts">Contacts</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="search">Search</string>
    <string name="diagnose_me">Diagnose Me</string>
    <string name="profile">Profile</string>
    <string name="analyse">Analyse</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login_C">LOGIN</string>
    <string name="create_an_account">Create an Account</string>
    <string name="register_C">REGISTER</string>
    <string name="login_now">Login Now</string>
    <string name="sign_up">Sign Up</string>
    <string name="say_hi">SAY HI!</string>
    <string name="forgot_password">Forgot Password</string>
</resources>