<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_height="match_parent"
    android:padding="15dp"
    android:background="?attr/colorPrimary"
    tools:context=".Login">


    <TextView
        android:text="@string/login"
        android:textSize="50sp"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="?attr/colorAccent"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/email"
            android:textSize="20dp"
            android:hint="@string/email"
            android:background="?attr/colorPrimaryVariant"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/password"
            android:textSize="20dp"
            android:hint="@string/password"
            android:background="?attr/colorPrimaryVariant"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login"
        android:text="@string/login_C"
        android:textStyle="bold"
        android:layout_marginBottom="10dp"
        android:background="@drawable/et_design"
        android:textColor="?attr/colorPrimaryVariant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/iforgorpass"
        android:text="@string/forgot_password"
        android:textStyle="bold"
        android:background="@drawable/et_design"
        android:textColor="?attr/colorPrimaryVariant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


    <TextView
        android:textStyle="bold|italic"
        android:textSize="35dp"
        android:background="@drawable/et_design"
        android:textColor="?attr/colorPrimaryVariant"
        android:gravity="center"
        android:layout_marginTop="280dp"
        android:id="@+id/SignUp"
        android:text="@string/sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>